# Free-PDF-Tool

./: .gitignore  README.md  core.py  helper.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test.docx
clipdfreader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_convert_pdf_to_docx.py  test_merge_pdf.py  test_read_pdf.py
