[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipdfreader"
version = "0.0.1"
description = "PDF-CLI-Tool"
readme = "README.md"
requires-python = ">=3.9"

dynamic = ["dependencies"]

authors = [{ name = "Raphael Haerle", email = "raphael@hhaerle.de" }]
maintainers = [{ name = "Raphael Haerle", email = "raphael@hhaerle.de" }]

[project.scripts]
pdfreader = "main:ready"

[tool.setuptools]
py-modules = ["main", "core"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }